add UpdateExpense
- update a expense in database
